# dispo-prep-agent

./: .env.example  .gitignore  README.md  langgraph.json  migration.md  next-steps.md  openapi.json  pyproject.toml
src/depo_prep/: configuration.py  graph.py  index_case_documents.py  one_shot_graph.py  prompts.py  state.py  utils.py
src/report_maistro/: configuration.py  graph.py  index_case_documents.py  prompts.py  state.py  utils.py
tests/: __init__.py  test_chroma_index.py  test_deposition_agent.py  test_deposition_agent_runnable.py  test_ocr_chunking.py
